// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"size":{"base":"x-small","xs":"small","s":"medium","m":"large","l":"x-large","xl":"inherit"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":{"base":"left","xs":"right","s":"left","m":"right","l":"left","xl":"right"},"underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: 1rem;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: inherit;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(min-width:760px) {
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(min-width:1300px) {
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  text-decoration: none !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  top: -2px !important;
  bottom: -2px !important;
  border-radius: 4px !important;
  right: -4px !important;
  left: -4px !important;
}
::slotted(a:focus)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:focus:not(:focus-visible))::before {
  border: 0 !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":true,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: underline;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"right","underline":false,"hasSlottedAnchor":true,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
::slotted(a) {
  margin: 0 !important;
  padding: 0 !important;
  outline: 0 !important;
  border-radius: 0 !important;
  background: transparent !important;
  text-decoration: none !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  top: -2px !important;
  bottom: -2px !important;
  border-radius: 4px !important;
  right: -2px !important;
  left: -2px !important;
}
::slotted(a:focus)::before {
  border: 2px solid #1A44EA !important;
}
::slotted(a:focus:not(:focus-visible))::before {
  border: 0 !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":true,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"left","underline":false,"hasSlottedAnchor":false,"theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: rgba(148, 149, 152, .18);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":true,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"left","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: rgba(148, 149, 152, .18);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"stretch":false,"size":"inherit","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: inherit;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","underline":false,"hasSlottedAnchor":false,"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  text-decoration: none;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;
